Add s60d30 DB